Move sticky navbar to bottom, remove Logo and Title section of navbar, fix alignment

--- a/assets/css/templatemo-softy-pinko.css
+++ b/assets/css/templatemo-softy-pinko.css
@@ -375,7 +375,7 @@ header
 */
 .header-area {
   position: fixed;
-  top: 30px;
+  bottom: 30px;
   left: 0px;
   right: 0px;
   z-index: 100;
@@ -389,8 +389,11 @@ header
 .header-area .main-nav {
   box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
   border-radius: 40px;
-  min-height: 80px;
+  min-height: 50px;
   background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .header-area .main-nav .logo {
@@ -410,17 +413,16 @@ header
 }
 
 .header-area .main-nav .nav {
-  float: right;
-  justify-content: space-evenly;
-  margin-top: 27px;
-  margin-left: 0px;
-  margin-right: 30px;
+  margin: 0 !important;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   position: relative;
   z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  min-width: 90%;
 }
 
 .header-area .main-nav .nav li {
@@ -455,7 +457,7 @@ header
   cursor: pointer;
   display: block;
   position: absolute;
-  top: 23px;
+  top: 8px;
   width: 32px;
   height: 40px;
   text-indent: -9999em;
@@ -552,7 +554,8 @@ header
 }
 
 .header-area.header-sticky .nav {
-  margin-top: 20px !important;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header-area.header-sticky .nav li a {
@@ -579,6 +582,7 @@ header
     height: 80px;
     box-shadow: none;
     text-align: center;
+    top: 30px;
   }
   .header-area .container {
     padding: 0px;
